k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lazysheeps
  labels:
    name: lazysheeps
    environment: production
